[package]
name = "order"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.6.0-pre.1"
validator = {version = "0.20", features = ["derive"]}
ulid = "1.1"
jsonwebtoken = "9.3.1"

thiserror = "2.0.12"
anyhow = "1.0.79"

sea-orm = { version = "1", "features"  = ["runtime-tokio-rustls", "sqlx-sqlite","macros"]}
salvo = { version = "0.77.1", features = ["rustls","oapi","logging","jwt-auth","cors"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }


tracing-appender = "0.2.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "time", "std", "chrono", "env-filter", "registry"] }
time = { version = "0.3.37", features = ["macros"] }
log = "0.4.26"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
rand = "0.9.0"

